--- a/playground/backend-base/src/main/resources/application.properties
+++ b/playground/backend-base/src/main/resources/application.properties
@@ -4,7 +4,7 @@ server.port=8080
 
 # H2 properties
 spring.datasource.url=jdbc:h2:file:./mydatabase
-spring.datasource.username=sa
+spring.datasource.username=ju
 spring.datasource.password=
 spring.datasource.driver-class-name=org.h2.Driver
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
