--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,3 +21,7 @@ logging.level.org.hibernate.orm.jdbc.bind=trace
 # Mostrar SQL formateado (opcional pero útil)
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.show-sql=true
+
+# JWT
+jwt.secret=YXNkc2Fkc2Fkc2Fkc2Fkc2Fkc2Fkc2Fkc2Fkc2Fkc2E= 
+jwt.expiration-ms=86400000
